artifacts/asupersync/bd-1now.4.6/stage_outputs/multi_event.txt
   Compiling frankenengine-engine v0.1.0 (/data/projects/franken_engine/crates/franken-engine)
error[E0382]: borrow of moved value: `coverage_gaps`
    --> /data/projects/franken_engine/crates/franken-engine/src/native_addon_membrane.rs:1501:32
     |
1480 |         let coverage_gaps = required_addon_ids
     |             ------------- move occurs because `coverage_gaps` has type `Vec<NativeAddonCoverageGap>`, which does not implement the `Copy` trait
...
1500 |             coverage_gaps,
     |             ------------- value moved here
1501 |             coverage_complete: coverage_gaps.is_empty(),
     |                                ^^^^^^^^^^^^^ value borrowed here after move
     |
help: consider cloning the value if the performance cost is acceptable
     |
1500 |             coverage_gaps: coverage_gaps.clone(),
     |                          +++++++++++++++++++++++

warning: unused variable: `old`
    --> /data/projects/franken_engine/crates/franken-engine/src/s3_fifo_cache_gate.rs:1619:13
     |
1619 |         let old = self.current_epoch;
     |             ^^^ help: if this is intentional, prefix it with an underscore: `_old`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `frankenengine-engine` (lib) generated 1 warning
error: could not compile `frankenengine-engine` (lib) due to 1 previous error; 1 warning emitted
